# uho-indexing

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BACKFILL_CHANGES.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  Dockerfile  FRONTEND_CHANGES.md  LANDING_PAGE_DESIGN.md  PRD.md  QA_AUTH_REPORT.md  QA_AUTH_REPORT_V2.md  QA_REPORT.md  QA_REPORT_FINAL.md  QA_REPORT_PLATFORM.md  QA_REPORT_SPRINT.md  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json
dashboard/public/: skill.md
docs/: API.md  BACKFILL_ARCHITECTURE.md  DEPLOYMENT_EVALUATION.md  DEPLOYMENT_GUIDE.md  DESIGN_CPI_TRANSFERS.md  SECURITY_AUDIT.md
examples/: INTEGRATION_NOTES.md  README.md
examples/pumptest/: .env.local.example  README.md  package.json  tailwind.config.ts  tsconfig.json
fixtures/: counter-idl.json  spl-token-2022-idl.json  spl-token-idl.json  swap-idl.json
scripts/: demo.sh  fetch-idl.ts
sidecar/: Cargo.toml  README.md  example-output.json
sidecar/src/: main.rs
src/: fastify.d.ts  index.ts
src/api/: auth-routes.ts  data-routes.ts  oauth-routes.ts  program-routes.ts  routes.ts  schema-routes.ts  server.ts  token-transfer-routes.ts  user-routes.ts  view-routes.ts  webhook-routes.ts
src/auth/: api-keys.ts  email.ts  jwt.ts  passwords.ts
src/cli/: index.ts  init.ts  platform.ts  schema.ts  start.ts  stop.ts  (+1 more)
test/: decoder.test.ts  e2e.test.ts  idl-parser.test.ts  idl-registry.test.ts  schema-generator.test.ts  shank-codama-parser.test.ts  token-tracker.test.ts
(+149 files in other folders)
